--- a/ui/src/App/App.scss
+++ b/ui/src/App/App.scss
@@ -1,12 +1,36 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Roboto:wght@500;700&display=swap');
+
 @import '../components/Nav/Nav.scss';
 
-.App {
-  background-color: rgb(0, 255, 170);
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+*,
+*::before,
+*::after {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+a {
+  color: goldenrod;
+}
+
+html,
+body {
+  font-family: 'Roboto';
+  background: #353535;
+  color: #fff;
+  line-height: 1.618;
+}
+
+@for $i from 1 through 12 {
+  .col-#{$i} {
+    width: calc((960/(12/#{$i}))*1%);
+  }
+}
+
+.container {
+  width: 100vw;
+  height: 100vh;
+  overflow-y: scroll;
+  position: relative;
 }
