--- a/ui/src/styles/index.scss
+++ b/ui/src/styles/index.scss
@@ -1,13 +1,34 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Roboto:wght@500;700&display=swap');
+
+*,
+*::before,
+*::after {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+a {
+  color: goldenrod;
+}
+
+html,
+body {
+  font-family: 'Roboto';
+  background: #353535;
+  color: #fff;
+  line-height: 1.618;
+}
+
+@for $i from 1 through 12 {
+  .col-#{$i} {
+    width: calc((960/(12/#{$i}))*1%);
+  }
+}
+
+.container {
+  width: 100vw;
+  height: 100vh;
+  overflow-y: scroll;
+  position: relative;
 }
